# mail-room

./: Cargo.toml  README.md  docker-compose.yml
src/: main.rs
src/json_parser/: mod.rs
src/user_roles/: mod.rs
src/user_roles/user_roles/: redis_connection.rs
